--- a/Mobile_Computing_project/app/src/main/AndroidManifest.xml
+++ b/Mobile_Computing_project/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_Computing_project">
         <activity
+            android:name=".detailActivity"
+            android:exported="false" />
+        <activity
             android:name=".startpage"
             android:exported="true" />
         <activity
