--- a/Mobile_Computing_project/app/src/main/AndroidManifest.xml
+++ b/Mobile_Computing_project/app/src/main/AndroidManifest.xml
@@ -14,18 +14,20 @@
             android:exported="false" />
         <activity
             android:name=".startpage"
-            android:exported="true" />
-        <activity
-            android:name=".cartActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".cartActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
